--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic/angular": "^5.5.2",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^5.1.3",
+    "react-bootstrap": "^1.6.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
