--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,10 @@
               }
             ],
             "styles": ["src/theme/variables.scss", "src/global.scss"],
-            "scripts": [],
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.js",
+              "node_modules/jquery/dist/jquery.js"
+            ],
             "aot": false,
             "vendorChunk": true,
             "extractLicenses": false,
