--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "e2e": "ng e2e"
   },
   "private": true,
+  "peerDependencies": {
+    "@angular/core": "~12.1.1"
+  },
   "dependencies": {
     "@angular/common": "~12.1.1",
     "@angular/core": "~12.1.1",
@@ -32,6 +35,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "^0.1202.10",
     "@angular-devkit/build-angular": "~12.1.1",
     "@angular-eslint/builder": "~12.0.0",
     "@angular-eslint/eslint-plugin": "~12.0.0",
@@ -41,13 +45,16 @@
     "@angular/compiler": "~12.1.1",
     "@angular/compiler-cli": "~12.1.1",
     "@angular/language-service": "~12.0.1",
+    "@angular/localize": "^12.2.10",
     "@capacitor/cli": "3.2.5",
     "@ionic/angular-toolkit": "^4.0.0",
+    "@popperjs/core": "^2.10.2",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
+    "ajv": "^8.6.3",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
