--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "peerDependencies": {
     "@angular/core": "~12.1.1"
   },
+  "optionalDependencies": {
+    "fsevents": "^2.0.7"
+  },
   "dependencies": {
     "@angular/common": "~12.1.1",
     "@angular/core": "~12.1.1",
